--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.3",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "recoil": "^0.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
