--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.1",
+    "@mui/styles": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "material-icons": "^1.10.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
@@ -13,6 +17,7 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
+    "tss-react": "^3.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
