--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chec/commerce.js": "^2.8.0",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
-    "@mui/styles": "^5.5.1",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.25.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
-    "material-icons": "^1.10.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
-    "react-helmet-async": "^1.2.3",
     "react-hook-form": "^7.28.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "recoil": "^0.6.1",
-    "tss-react": "^3.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
