--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.28.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-switch": "^6.0.0",
     "recoil": "^0.6.1",
     "web-vitals": "^2.1.4"
   },
